# cookiecutter-fal

./: README.md  cookiecutter.json  requirements.txt
hooks/: post_gen_project.py  pre_gen_project.py
local_extensions/: __init__.py  field.py  prompt.py
local_extensions/fields/: __init__.py  base.py  prompt.py  registry.py
stable_diffusion/: __init__.py  env.py  inference.py  model.py  utils.py
{{ cookiecutter.project_slug | replace('_', '-') }}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  serve.py
{{ cookiecutter.project_slug | replace('_', '-') }}/.github/.workflows/: deploy.yaml
{{ cookiecutter.project_slug | replace('_', '-') }}/.github/workflows/: deploy.yaml
{{ cookiecutter.project_slug | replace('_', '-') }}/src/{{ cookiecutter.project_slug }}/: __main__.py  inference.py  pipeline.py  requirements.txt
{{ cookiecutter.project_slug | replace('_', '-') }}/tests/: test_{{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug | replace('_', '-') }}/tests/test_cases/: example.json
{{ cookiecutter.project_slug | replace('_', '-') }}/{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  __init__.py  inference.py  model.py  models.py  requirements.txt
{{cookiecutter.project_slug | replace('_', '-')}}/: fal.ini  serve.py
{{cookiecutter.project_slug | replace('_', '-')}}/.github/.workflows/: lint.yaml
{{cookiecutter.project_slug | replace('_', '-')}}/{{cookiecutter.project_slug}}/: env.py  model.py  serve.py
{{cookiecutter.project_slug}}/: inference.py  model.py  requirements.txt
