[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
git_describe_command= 'git describe --tags --abbrev=0 --dirty --match "v*"'
tag_regex = "v(?P<version>.*)$"
fallback_version = "0.0.0"
version_file = "src/{{ cookiecutter.project_slug }}/_{{ cookiecutter.project_slug }}_version.py"

[project]
name = "{{ cookiecutter.project_slug | replace('_', '-') }}"
dynamic = ["version"]
description = "A general-purpose {{ cookiecutter.project_name }} API built with Fal Serverless"
readme = "README.md"
dependencies = [
    "fal",
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest<8",
    "pytest-xdist",
]
dev = [
    "pytest<8",
    "pytest-xdist",
    "pre-commit"
]

[tool.ruff]
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"

[tool.ruff.lint]
select = ["E", "F", "W", "PLC", "PLE", "PLW", "I", "UP"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true